force-app/main/default/objects/Dupes_Created_Today__c/Dupes_Created_Today__c.object-meta.xml
<CustomObject>
    <label>Dupes Created Today</label>
    <nameField>
        <label>Dupes Created Today Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dupes Created Today</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>