force-app/main/default/objects/Dupes_Created_Today__c/fields/Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record__c</fullName>
    <label>Contact Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>