force-app/main/default/objects/Dupes_Created_Today__c/fields/DupeCatcher_Potential_Duplicate_ID__c.field-meta.xml
<CustomField>
    <fullName>DupeCatcher_Potential_Duplicate_ID__c</fullName>
    <label>DupeCatcher Potential Duplicate ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>