force-app/main/default/objects/Dupes_Created_Today__c/fields/Duplicate_Alert_Alert_Number__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Alert_Alert_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Alert: Alert Number</label>
    <referenceTo>SFSSDupeCatcher__Duplicate_Warning__c</referenceTo>
    <relationshipLabel>Dupes Created Today</relationshipLabel>
    <relationshipName>Dupes_Created_Today</relationshipName>
    <type>Lookup</type>
</CustomField>