force-app/main/default/objects/Dupes_Created_Today__c/fields/Duplicate_Number__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Number</label>
    <referenceTo>SFSSDupeCatcher__Potential_Duplicate__c</referenceTo>
    <relationshipLabel>Dupes Created Today</relationshipLabel>
    <relationshipName>Dupes_Created_Today</relationshipName>
    <type>Lookup</type>
</CustomField>