force-app/main/default/objects/Dupes_Created_Today__c/fields/Duplicate_Type__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Type__c</fullName>
    <label>Duplicate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>