force-app/main/default/objects/Dupes_Created_Today__c/fields/Filter_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Name</label>
    <referenceTo>SFSSDupeCatcher__Scenario_Rule__c</referenceTo>
    <relationshipLabel>Dupes Created Today</relationshipLabel>
    <relationshipName>Dupes_Created_Today</relationshipName>
    <type>Lookup</type>
</CustomField>