force-app/main/default/objects/Dupes_Created_Today__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Full Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dupes_Created_Today</relationshipName>
    <type>Lookup</type>
</CustomField>