force-app/main/default/objects/Dupes_Created_Today__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dupes_Created_Today3</relationshipName>
    <type>Lookup</type>
</CustomField>