force-app/main/default/objects/Dupes_Created_Today__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dupes_Created_Today1</relationshipName>
    <type>Lookup</type>
</CustomField>